kube/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hivebox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hivebox
  template:
    metadata:
      labels:
        app: hivebox
    spec:
      containers:
        - name: hivebox
          image: hivebox:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
