kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hivebox
spec:
  selector:
    app: hivebox
    component: api
  ports:
    - name: http
      port: 80
      targetPort: http
