kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hivebox
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
spec:
  ingressClassName: nginx
  rules:
    - host: hivebox.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hivebox
                port:
                  number: 80
